fix notification appear, use wrapper and add master css